# aiml-py-common-utils

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  init_setup.sh  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  restore_original.py  run_tox.sh  template.py  tox.ini
.github/workflows/: ci.yml  docs.yml  python-publish.yml
Common_Utils/: index.html
LLM_OpenAI/: index.html
docs/: Common_Utils.md  LLM_OpenAI.md  index.md
research/: cookbook.ipynb
search/: search_index.json
src/aiml_py_common_utils/: __init__.py  common.py  log_manager.py
src/aiml_py_common_utils/gen_ai/: __init__.py  llm_openai.py
tests/: conftest.py
tests/unit/: test_common_utils.py  test_function_unit.py  test_genai_openai_utils.py
