[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "<REPO_NAME>"
version = "0.0.1"
description = "<COMMAND_NAME> is a Python-based command-line interface (CLI) utility."
authors = [
    {name = "<GITHUB_USER_NAME>", email = "<AUTHOR_EMAIL>"},
]
dependencies = ["requests==2.28.2"]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "<LICENCSE_NAME>"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[options]
package_dir = "src"


[project.optional-dependencies]
testing = [
    "ruff==0.0.261",
    "pytest>=7.2.2",
    "tox>=4.4.11",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.1.1"
]

[project.urls]
"Bug Tracker" = "https://github.com/<GITHUB_USER_NAME>/<REPO_NAME>/issues"
"Documentation" = "https://<GITHUB_USER_NAME>.github.io/<REPO_NAME>/"
"Source" = "https://github.com/<GITHUB_USER_NAME>/<REPO_NAME>"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
implicit_optional = true # update for latest mypy

[tool.ruff]
# Decrease the maximum line length to 127 characters.
line-length = 127
src = ["src"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# rules reference - https://beta.ruff.rs/docs/rules/
select = [
    "E9",
    "F63",
    "F7",
    "F82",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
