[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiml-py-common-utils"
version = "0.0.1b"
authors = [
    {name = "c17hawke", email = "sunny.c17hawke@gmail.com"},
]
dependencies = [
    "requests==2.28.2",
    "loguru==0.7.2",
    "python-box==7.1.1",
    "joblib==1.3.2"
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[options]
package_dir = "src"


[project.optional-dependencies]
testing = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "tox==4.12.1",
    "ruff==0.1.14",
    "mypy==1.8.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/c17hawke/aiml-py-common-utils/issues"
"Documentation" = "https://c17hawke.github.io/aiml-py-common-utils/"
"Source" = "https://github.com/c17hawke/aiml-py-common-utils"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "src"
implicit_optional = true # update for latest mypy

[tool.ruff]
# Decrease the maximum line length to 127 characters.
line-length = 127
src = ["src"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# rules reference - https://beta.ruff.rs/docs/rules/
select = [
    "E9",
    "F63",
    "F7",
    "F82",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "ANN206",
]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
